# welding-report

./: .gitignore  README.md  ebw_simulation.py  index.html  test.py
ERW/: QUICKSTART.md  README.md  config.json  erw_simulation.py  ref.md
cpp-weld/: CMakeLists.txt  README.md  TIG_README.md  create_video.py  main.cpp  plot_weld_results.py  run_tig_simulation.sh
cpp-weld-2/: .gitignore  CMakeLists.txt  COMMANDS.md  FINAL_SUMMARY.md  Makefile  NEW_FEATURES.md  PLOTS_COMPARISON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCENARIOS_GUIDE.md  START_HERE.md  VISUALIZATION_GUIDE.md  WeldingSimulation.cpp  WeldingSimulation.h  build_and_run.sh  generate_video.py  main.cpp  pyfile.py  run_all_scenarios.sh  visualize.py  visualize_complete.py
cpp-weld/output_cpp/: weld_config.txt  weld_results.csv
cpp-weld/output_cpp/frames/: frame_00010.csv  frame_00020.csv  frame_00030.csv  frame_00040.csv  frame_00050.csv  frame_00060.csv  frame_00070.csv  frame_00080.csv  frame_00090.csv  frame_00100.csv  frame_00110.csv  frame_00120.csv  frame_00130.csv  frame_00140.csv  frame_00150.csv  frame_00160.csv  frame_00170.csv  frame_00180.csv  frame_00190.csv  frame_00200.csv  frame_00210.csv  frame_00220.csv  frame_00230.csv  frame_00240.csv  frame_00250.csv  frame_00260.csv  frame_00270.csv  frame_00280.csv  frame_00290.csv  frame_00300.csv  frame_00310.csv  frame_00320.csv  frame_00330.csv  frame_00340.csv  frame_00350.csv  frame_00360.csv  frame_00370.csv  frame_00380.csv  frame_00390.csv  frame_00400.csv  (+119 more)
ebw/: config.json  convert_datasheet_to_json.py  datasheet.txt  ebw_simulation.py  ebw_simulation.py.backup
lbw/: config.json  lbw_simulation.py  lbw_simulation.py.backup
paw/: config.json  paw_simulation.py  paw_simulation.py.backup
saw/: config.json  saw_simulation.py  saw_simulation.py.backup
tig-ele/: config.json  run_all_scenarios.sh  sim-weld.py
website/: generate_website.py  index.html
